# PyMorseKit

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: codeql.yml
pymorsekit/: __init__.py  decoder.py  encoder.py  mappings.py
test/: test_basic.py
