[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "PyMorseKit"
version = "0.1.0"
description = "A lightweight Python toolkit for encoding, decoding, and working with Morse code."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.8"

authors = [{ name = "fmasterpro27" }]

keywords = [
    "morse",
    "morse-code",
    "encoding",
    "decoding",
    "telegraph",
    "ham-radio",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Fmasterpro27/PyMorseKit"
Repository = "https://github.com/Fmasterpro27/PyMorseKit"
Issues = "https://github.com/Fmasterpro27/PyMorseKit/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
